menambahkan deskripsi di halaman index

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Halo, saya Riska!</h1>"
+  <h1>Halo, saya Riska!</h1>
+  <p>Saya adalah mahasiswa dan pengembang web</p>
+  
 </body>
 </html>  
